Extensions: Cache frame data for all frames on creation.

Currently, in ExtensionWebContentsObserver::RenderFrameCreated we only cache
frame data for extension frames. However, we should do so for all frames.

This behavior was (incorrectly) changed in r501291. This CL reverts to old
behavior. This should help account for the regression in
Extensions.ExtensionFrameMapCacheHit and lead to less hops from the IO to the
UI thread and back.

BUG=810614

Change-Id: I2cb66cbf531e01fa40ffb941ca721c7cb62da818
Reviewed-on: https://chromium-review.googlesource.com/910082
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536186}
Former-commit-id: 5c9b088f18a3ea440d166482e59004bf0c536422